# funding-data-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
funding_data_api/: db.py  main.py  settings.py
funding_data_api/api/v0/: meta.py  router.py
funding_data_api/dto/: meta.py
funding_data_api/queries/: meta.py
funding_data_api/shared/models/: __init__.py  asset.py  contract.py  historical_funding_point.py  live_funding_point.py  quote.py  section.py
